# Danmaku-Game

./: .gitignore  README.md
resources/shaders/: fragmentShader.glsl  vertexShader.glsl
src/: CMakeLists.txt  main.cpp
src/controller/: InputHandler.cpp  InputHandler.h  TODO.txt  process.cpp  process.h
src/glados/: 3_0 xinlus glad.c  3_3 widnows glad.c
src/model/: Game.cpp  Game.h  TODO.txt  game.cpp  game.h
src/model/entities/: Entity.cpp  Entity.h  entity.cpp  entity.h
src/view/: Renderer.cpp  Renderer.h  ShaderCompiler.cpp  ShaderCompiler.h  TODO.txt  renderer.cpp  renderer.h
src/view/shaders/: fragmentShader.glsl  vertexShader.glsl
